--- a/Vokabeltrainer-2.html
+++ b/Vokabeltrainer-2.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8"> <!-- character encoding -->
-        <link rel="stylesheet" href="style.css"> <!-- CSS style sheet -->
-		<title>Vokabeltrainer - Versuch 2</title>
-	</head>
-	<body>
-        <div id="wrapper"> <!-- Added to reduce text width (see style.css) -->
-            <h1>21.05.2017 - Vokabeltrainer - Versuch 2</h1>
-            <p>Was er kann: Vokabeltrainer fragt in randomisierter Reihenfolge nach 10 dänischen Vokabeln. Wird eine Vokabel falsch übersetzt, wird immer weiter nachgefragt, bis die richtige Antwort gegeben wird oder der Nutzer "Stop" eingibt. Am Schluss wird angegeben, wie viele und welche Vokabeln (richtig) beantwortet wurden und wie viele falsche Antworten (auch beim gleichen Wort) bzw. Stops eingegeben wurden. </p>
-            <p>
-                <script type="text/javascript">
-                    // Shuffle function
-                    //Function taken from: https://stackoverflow.com/questions/2450954/how-to-randomize-shuffle-a-javascript-array
-                    function shuffle(array) {
-                        var currentIndex = array.length, temporaryValue, randomIndex;
 
-                        // While there remain elements to shuffle...
-                        while (0 !== currentIndex) {
+<head>
+    <meta charset="utf-8">
+    <!-- character encoding -->
+    <link rel="stylesheet" href="style.css">
+    <!-- CSS style sheet -->
+    <title>Vokabeltrainer - Versuch 2</title>
+</head>
+
+<body>
+    <div id="wrapper">
+        <!-- Added to reduce text width (see style.css) -->
+        <h1>21.05.2017 - Vokabeltrainer - Versuch 2</h1>
+        <p>Was er kann: Vokabeltrainer fragt in randomisierter Reihenfolge nach 10 dänischen Vokabeln. Wird eine Vokabel falsch übersetzt, wird immer weiter nachgefragt, bis die richtige Antwort gegeben wird oder der Nutzer "Stop" eingibt. Am Schluss wird angegeben, wie viele und welche Vokabeln (richtig) beantwortet wurden und wie viele falsche Antworten (auch beim gleichen Wort) bzw. Stops eingegeben wurden. </p>
+        <p>
+            <script type="text/javascript">
+                // Shuffle function
+                //Function taken from: https://stackoverflow.com/questions/2450954/how-to-randomize-shuffle-a-javascript-array
+                function shuffle(array) {
+                    var currentIndex = array.length,
+                        temporaryValue, randomIndex;
+
+                    // While there remain elements to shuffle...
+                    while (0 !== currentIndex) {
 
                         // Pick a remaining element...
                         randomIndex = Math.floor(Math.random() * currentIndex);
@@ -27,42 +33,56 @@
                         temporaryValue = array[currentIndex];
                         array[currentIndex] = array[randomIndex];
                         array[randomIndex] = temporaryValue;
-                        }
-
-                        return array;
                     }
-                    var Reihenfolge = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]; // Array to be shuffled
-                    Reihenfolge = shuffle(Reihenfolge); // shuffle function applied to array to achieve random order
-                    // 2 Arrays containing vocab:
-                    var WortlisteDeutsch = ["Hallo!", 	"ich", 	"heißen", 	"Dänemark", "Mädchen", 	"Junge", 	"Mann", 	"Frau", 	"Schule", 	"schreiben"];
-                    var WortlisteDänisch = ["Hej!",		"jeg", 	"hedde",	"Danmark",	"pige",		"dreng",	"mand",		"kvinde",	"skole",	"skrive"];
-                    var Antwort = new Array; // New array for all answers
-                    var RA = new Array; // New array for all correct answers
-                    var FA = new Array; // New array for all incorrect answers
-                    var Zaehler = 0; // counter for while-loop
-                    var Richtig = 0; // counter for correct answers
-                    var Falsch = 0; // counter for incorrect answers
-                    alert("Bitte übersetze die folgenden Wörter ins Dänische. Solltest du eine Antwort nicht wissen, schreibe Stop in das Eingabefeld, um zur nächsten Frage zu gelangen.") // Instructions
-                    // while-loop: Ask for translations until counter reaches 10.
-                    while (Zaehler < 10) 
-                    // All answers are added to generel Antwort-Array into respective position:
-                    {Antwort[Reihenfolge[Zaehler]] = prompt(WortlisteDeutsch[Reihenfolge[Zaehler]], "Bitte Übersetzung eingeben");
+
+                    return array;
+                }
+                var Reihenfolge = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]; // Array to be shuffled
+                Reihenfolge = shuffle(Reihenfolge); // shuffle function applied to array to achieve random order
+                // 2 Arrays containing vocab:
+                var WortlisteDeutsch = ["Hallo!", "ich", "heißen", "Dänemark", "Mädchen", "Junge", "Mann", "Frau", "Schule", "schreiben"];
+                var WortlisteDänisch = ["Hej!", "jeg", "hedde", "Danmark", "pige", "dreng", "mand", "kvinde", "skole", "skrive"];
+                var Antwort = new Array; // New array for all answers
+                var RA = new Array; // New array for all correct answers
+                var FA = new Array; // New array for all incorrect answers
+                var Zaehler = 0; // counter for while-loop
+                var Richtig = 0; // counter for correct answers
+                var Falsch = 0; // counter for incorrect answers
+                alert("Bitte übersetze die folgenden Wörter ins Dänische. Solltest du eine Antwort nicht wissen, schreibe Stop in das Eingabefeld, um zur nächsten Frage zu gelangen.") // Instructions
+                // while-loop: Ask for translations until counter reaches 10.
+                while (Zaehler < 10)
+                // All answers are added to generel Antwort-Array into respective position:
+                {
+                    Antwort[Reihenfolge[Zaehler]] = prompt(WortlisteDeutsch[Reihenfolge[Zaehler]], "Bitte Übersetzung eingeben");
                     // If correct, add to R(ight)A(nswer)-Array and add 1 to Richtig-counter. Add 1 to general counter to move to next word:
-                    if(Antwort[Reihenfolge[Zaehler]]==WortlisteDänisch[Reihenfolge[Zaehler]]){RA[Richtig] = Antwort[Reihenfolge[Zaehler]]; Richtig = Richtig + 1; Zaehler = Zaehler + 1}
+                    if (Antwort[Reihenfolge[Zaehler]] == WortlisteDänisch[Reihenfolge[Zaehler]]) {
+                        RA[Richtig] = Antwort[Reihenfolge[Zaehler]];
+                        Richtig = Richtig + 1;
+                        Zaehler = Zaehler + 1
+                    }
                     // Way out: Type "Stop" to move to next word.
-                    else if(Antwort[Reihenfolge[Zaehler]]=="Stop"){FA[Falsch] = Antwort[Reihenfolge[Zaehler]]; Falsch = Falsch + 1; Zaehler = Zaehler + 1}
+                    else if (Antwort[Reihenfolge[Zaehler]] == "Stop") {
+                        FA[Falsch] = Antwort[Reihenfolge[Zaehler]];
+                        Falsch = Falsch + 1;
+                        Zaehler = Zaehler + 1
+                    }
                     // If incorrect, add to F(alse)A(nswer)-Array and add 1 to Falsch-counter. Do not add 1 to general counter so question is asked again:
-                    else {FA[Falsch] = Antwort[Reihenfolge[Zaehler]]; Falsch = Falsch + 1}};
-                    // Print all results:
-                    document.write("<br><br> Hier ist die Wortliste Deutsch:" + WortlisteDeutsch);
-                    document.write("<br><br> Hier ist die Wortliste Dänisch:" + WortlisteDänisch);
-                    document.write("<br><br> Hier sind deine Antworten:" + Antwort);
-                    document.write("<br><br> Du hast " + Richtig + " richtig beantwortet.");
-                    document.write("<br><br> Hier sind deine richtigen Antworten:" + RA);
-                    document.write("<br><br> Du hast " + Falsch + " falsch beantwortet.");
-                    document.write("<br><br> Hier sind deine falschen Antworten:" + FA);
-                </script>
-            </p>
-        </div>
-	</body>
+                    else {
+                        FA[Falsch] = Antwort[Reihenfolge[Zaehler]];
+                        Falsch = Falsch + 1
+                    }
+                };
+                // Print all results:
+                document.write("<br><br> Hier ist die Wortliste Deutsch:" + WortlisteDeutsch);
+                document.write("<br><br> Hier ist die Wortliste Dänisch:" + WortlisteDänisch);
+                document.write("<br><br> Hier sind deine Antworten:" + Antwort);
+                document.write("<br><br> Du hast " + Richtig + " richtig beantwortet.");
+                document.write("<br><br> Hier sind deine richtigen Antworten:" + RA);
+                document.write("<br><br> Du hast " + Falsch + " falsch beantwortet.");
+                document.write("<br><br> Hier sind deine falschen Antworten:" + FA);
+            </script>
+        </p>
+    </div>
+</body>
+
 </html>
